

kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from my experiences with the former kwm, which I
originally based on David Hogan's 9wm (a smart and small windowmanager
written in plain C).



In 0.13:
--------
patchlevel 8:
        - delayed internal event handling fix (kwm sometimes lost the 
           mouse on opaque resize)

patchlevel 7:
        - small bugfixes
        - improved (faster) configure request handling
        - some support for windowgroups
        - fixed unClutter/cascade with standalone menubars

patchlevel 6:
        - dock window handling improved for restart
        - new CheckRaise option for focus follows mouse policies 
        - slightly improved the titlebar animation (Thorsten Scheuermann)


patchlevel 5:
        - animation of shaded windows improved
         - "restart" command in addition to "go:" and "configure"
         - sensitive handling of maximized windows when the window 
            region changes.

patchlevel 4:
        - improved handling for floating menubars

patchlevel 3:
        - fixed semantics with FocusFollowsMouse and AutoRaise:
               There are now two kwmrc properties:
                      AutoRaise=on/off
                      AutoRaiseInterval=0...x
               If the inner window command for the left mouse button contains
               any raise, this applies to the first click.

patchlevel 2:
        - some additions to the middle mouse handling to emulate
           the former behaviour with MMB-movement.
        - new signal "initialized" emited to modules when the
          initialization is finished.
	- titlebar font choosing enabled (CT)
	- title alignment (CT) 
		( kwmrc\[General]\TitleAlignment=[left|middle|right] )
	- stickyTitles, stickyClasses lists (in a [Sticky] section) 
		a la noDecor*, noFocus* lists (CT)

patchlevel 1:
        - simplified outline drawing since the previous nifty stippled